[package]
authors = ['Chainflip Team <https://github.com/chainflip-io>']
description = 'Derive macro for generating event decode functions for the cfe'
edition = '2018'
homepage = 'https://chainflip.io'
license = '<TODO>'
name = 'decode-event-derive'
repository = 'https://github.com/chainflip-io/chainflip-backend'
version = '0.1.0'

[lib]
proc-macro = true

[dependencies]
syn = "1.0.74"
quote = "1.0.9"
proc-macro2 = "1.0.28"