[package]
name = "solana-rpc-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
bs58 = {version = "^0.5"}
jsonrpsee = {version = "^0.16.2", features = ["full"]}
serde = {version = "^1", features = ["derive"]}
serde_json = {version = "^1"}

[dev-dependencies]
tokio = {version = "^1", features = ["macros", "rt", "rt-multi-thread"]}
